fix(front-end): change content and worked on menu

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,8 +3,8 @@
   "contact": "Contact",
   "homeMetaTitle": "Blockchain Association of Costa Rica",
   "homeMetaDescription": "Asoblockchain Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society.",
-  "copyright": "© All rights reserved. Created by Edenia Labs.",
-  "homeHeaderSubtitleOne": "We seek to unite the blockchain ecosystem of Costa Rica to promote trust, transparency, security, and innovation of distributed technologies in the country.",
+  "copyright": "© All rights reserved. Created by",
+  "homeHeaderSubtitleOne": "We seek to link the blockchain ecosystem in Costa Rica to promote distributed technologies’ trust, transparency, security, and innovation in the country.",
   "ourMission": "Our Mission",
   "members": "Members",
   "news": "News",
@@ -13,53 +13,54 @@
   "joinAssociation": "Join the Association",
   "claim": "Claim your",
   "freeNft": "FREE NFT!",
-  "ourReasonBeing": "OUR REASON FOR BEING",
+  "ourReasonBeing": "OUR PURPOSE",
   "joinTheAssociation": "JOIN THE ASSOCIATION",
-  "committedFuture": "Asoblockchain Costa Rica is committed to the future",
+  "committedFuture": "Asoblockchain de Costa Rica commits to the future.",
   "associationMembers": "Association Members",
-  "ourReasonBeingDes": "Asoblockchain Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society. We seek to create relationships between different sectors to co-create a more transparent, inspiring and secure digital future.",
+  "ourReasonBeingDes": "Asoblockchain de Costa Rica is committed to pushing the innovation and development of distributed technologies to benefit Costa Rican society. We seek to forge relationships among various sectors to co-create a more transparent, inspiring, and safe digital future.",
   "interestingData": "INTERESTING DATA",
-  "subscribeNewsletter": "Subscribe to the newsletter",
+  "subscribeNewsletter": "Subscribe to our newsletter",
   "subscribe": "Subscribe",
-  "goUp": "Go up",
+  "goUp": "Back to top",
   "pastEvents": "PAST EVENTS",
-  "socialMedia": "FOLLOW US ON SOCIAL NETWORKS",
+  "socialMedia": "FOLLOW US ON SOCIAL MEDIA",
   "representation": "Representation",
-  "representationDes": "Asoblockchain is in charge of representing our members and interests, as well as prioritizing a regulatory agenda for the protection of users.",
+  "representationDes": "Asoblockchain represents our members and interests and prioritizes a regulatory plan to protect users.",
   "participation": "Participation",
-  "participationDes": "We take an active role in national and international discussions, as well as in coordinating with technology organizations, entrepreneurs and users.",
+  "participationDes": "We take an active role in national and international forums and coordinate tech organizations, businesses, and users.",
   "promotion": "Promotion",
-  "promotionDes": "We amplify our message, share our enthusiasm for blockchain technologies, and educate on their features and benefits.",
+  "promotionDes": "We amplify our message, share our enthusiasm toward blockchain technologies, and educate about their features and benefits.",
   "memberCompanies": "Member Companies",
   "individuals": "Individuals",
   "students": "Students",
-  "joinAssociationDesc": "Our members demonstrate great commitment to building, investing in, and defending blockchain technology. Asoblockchain welcomes people or organizations that want to help us develop the blockchain ecosystem in Costa Rica. We have different types of membership.",
+  "becomeMember": "BECOME A MEMBER",
+  "joinAssociationDesc": "Our members demonstrate commitment to building, investing and defending blockchain technologies. Asoblockchain welcomes individuals and organizations wishing to support the development of a blockchain ecosystem in Costa Rica. We offer different memberships.",
   "organizationsCompanies": "Organizations and companies:",
-  "rightVoiceVote": "With the Right to Voice and Vote",
-  "noRightVote": "No Right to Vote",
-  "individualAssociates": "Asociados individuales:",
+  "rightVoiceVote": "With full rights to speak and to vote",
+  "noRightVote": "Without the right to vote",
+  "individualAssociates": "Individual members:",
   "affiliates": "Affiliates: ",
-  "footerText": "Asoblockchain Costa Rica is a non-profit organization and without any political affiliation. If you have questions about our representation, you can contact us.",
-  "accessOrganizationEvents": "Access to organization events.",
-  "accessInformationAboutBlockchain": "Access to information about blockchain opportunities and advice in Costa Rica.",
-  "networkingBetweenBusinessmen": "Networking between businessmen.",
-  "websiteAnnouncementsIndustry": "Announcements on the website and support in relations between sectors.",
+  "footerText": "Asoblockchain de Costa Rica is a non-profit organization with no political affiliation. If you have questions about our representation, please contact us. ",
+  "accessOrganizationEvents": "Access to events by the organization.",
+  "accessInformationAboutBlockchain": "Access to information about opportunities and advisory about blockchain in Costa Rica.",
+  "networkingBetweenBusinessmen": "Networking.",
+  "websiteAnnouncementsIndustry": "Announcements on the website and support in multisector relations.",
   "discountsActivitiesOrganized": "Discounts on activities organized by the association.",
-  "accessAsoblockchainChat": "Access to Asoblockchain chat.",
+  "accessAsoblockchainChat": "Access to Asoblockchain’s chat.",
   "accessOrganizationEventsDiscount": "Access to events of the organization with a discount.",
-  "individualAccessAsoblockchainChat": "Individual access to Asoblockchain chat.",
-  "accessEventsOrganizationSpecial": "Access to events of the organization with a special price.",
+  "individualAccessAsoblockchainChat": "Individual access to Asoblockchain’s chat.",
+  "accessEventsOrganizationSpecial": "Access to events by the organization with a special price.",
   "ticoblockchain2019": "Ticoblockchain 2019",
-  "ticoblockchain2019Des": "First blockchain congress in Costa Rica.",
+  "ticoblockchain2019Des": "First congress about blockchain in Costa Rica.",
   "ticoblockchain2021": "Ticoblockchain 2021",
-  "ticoblockchain2021Des": "Free seminars aimed at Costa Rican financial entities.",
+  "ticoblockchain2021Des": "Free seminars for financial entities in Costa Rica.",
   "titleFirtsNew": "Position of the Blockchain Association of Costa Rica regarding the proposal of taxes on crypto assets of the Ministry of Finance",
   "titleSecondNew": "The panorama in 2021 for blockchain and cryptocurrencies in Costa Rica",
   "titleThreeNew": "AsoBlockchain and the future of Blockchain in Costa Rica",
   "november2021": "November 11, 2021",
   "febrero2021": " 7 February, 2021",
   "enero2019": "8 January 2019",
-  "newsletter": "Asoblockchain respects your privacy. Your information will be kept confidential and you can unsubscribe from these communications at any time.",
+  "newsletter": "Asoblockchain respects your privacy, and your information will be kept confidential. You can drop out anytime from our communications.",
   "contactUsNow": "CONTACT US NOW",
   "sentSuccessfully": "Thank you for contacting Asoblockchain. We will reply to you as soon as possible",
   "name": "Name",
@@ -102,5 +103,8 @@
   "ASOBLOCKCHAINAffiliationForm": "ASOBLOCKCHAIN Affiliation Form",
   "appreciateInterestBeingPartInitiative": "We appreciate your interest in being part of this initiative, please complete the requested information.",
   "requiredField": "Required field",
-  "invalidEmail": "Invalid email"
+  "invalidEmail": "Invalid email",
+  "idiom": "Español",
+  "information": "Information",
+  "language": "Language"
 }
