--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -19,7 +19,7 @@
   "associationMembers": "Miembros de la Asociación",
   "ourReasonBeingDes": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense. Buscamos crear relaciones entre distintos sectores para co-crear un futuro digital más transparente, inspirador y seguro.",
   "interestingData": "DATOS INTERESANTES",
-  "subscribeNewsletter": "Suscríbete al boletín",
+  "subscribeNewsletter": "Suscríbase al boletín",
   "subscribe": "Suscribirse",
   "goUp": "Subir al Inicio",
   "pastEvents": "EVENTOS PASADOS",
@@ -36,7 +36,7 @@
   "becomeMember": "ÚNASE A LA ASOCIACIÓN",
   "joinAssociationDesc": "Nuestros miembros demuestran gran compromiso en construir, invertir y defender la tecnología de blockchain. Asoblockchain da la bienvenida a personas u organizaciones que quieran ayudarnos a desarrollar el ecosistema blockchain en Costa Rica. Tenemos distintas modalidades de membresía.",
   "organizationsCompanies": "Organizaciones y empresas:",
-  "rightVoiceVote": "Con Derecho a Vos y Voto",
+  "rightVoiceVote": "Con Derecho a Voz y Voto",
   "noRightVote": "Sin Derecho a Voto",
   "individualAssociates": "Asociados individuales:",
   "affiliates": "Afiliados:",
@@ -61,7 +61,7 @@
   "febrero2021": " 7 febrero, 2021",
   "enero2019": "8 enero, 2019",
   "newsletter": "Asoblockchain respeta su privacidad. Su información se mantendrá confidencial y puede darse de baja de estas comunicaciones en cualquier momento",
-  "contactUsNow": "CONTACTENOS AHORA",
+  "contactUsNow": "CONTÁCTENOS AHORA",
   "sentSuccessfully": "Gracias por contactar a Asoblockchain. Le responderemos lo antes posible",
   "name": "Nombre",
   "telephone": "Teléfono",
@@ -74,10 +74,10 @@
   "naturalPersonRegistration": "Registro Persona Física",
   "recordPersonal": "Este registro es personal. Porfavor seleccione su categoría de afiliación.",
   "associated": "Asociado:",
-  "associatedFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, vos y voto en la toma de decisiones.",
+  "associatedFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, voz y voto en la toma de decisiones.",
   "associatedSecondPoint": " -Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica. Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
   "affiliate": "Afiliado:",
-  "affiliateFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, con vos (pero sin voto en la toma de decisiones)",
+  "affiliateFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, con voz (pero sin voto en la toma de decisiones)",
   "selectMembershipCategory": "Seleccione su categoría de afiliación",
   "associateVoiceVotingRights": "Asociado con Derecho de Voz y Voto - Costo Anual: $150",
   "affiliateAnnualCost": "Afiliado - Costo Anual: $50",
