content(home): change content

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -4,20 +4,20 @@
   "homeMetaTitle": "Asociación de Blockchain de Costa Rica",
   "homeMetaDescription": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense.",
   "copyright": "© Todos los derechos reservados. Creado por",
-  "homeHeaderSubtitleOne": "Buscamos unir al ecosistema blockchain de Costa Rica para promover la confianza, transparencia, seguridad, e innovación de las tecnologías distribuidas en el país.",
+  "homeHeaderSubtitleOne": "Unimos al ecosistema blockchain de Costa Rica para promover la confianza, transparencia, seguridad, e innovación de las tecnologías distribuidas en el país.",
   "ourMission": "Nuestra misión",
   "members": "Miembros",
   "news": "Noticias",
   "newBlogs": "Noticias y blogposts",
   "headerText": "Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.",
-  "joinAssociation": "Unirse a la Asociación",
+  "joinAssociation": "Quiero asociarme",
   "claim": "Reclama tu",
   "freeNft": "NFT GRATIS!",
   "ourReasonBeing": "NUESTRA RAZÓN DE SER",
   "joinTheAssociation": "ÚNASE A LA ASOCIACIÓN",
   "committedFuture": "Asoblockchain de Costa Rica se compromete con el futuro",
   "associationMembers": "Miembros de la Asociación",
-  "ourReasonBeingDes": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense. Buscamos crear relaciones entre distintos sectores para co-crear un futuro digital más transparente, inspirador y seguro.",
+  "ourReasonBeingDes": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense. Conectamos a distintos sectores para co-crear un futuro digital más transparente, inspirador y seguro.",
   "interestingData": "DATOS INTERESANTES",
   "subscribeNewsletter": "Suscríbase al boletín",
   "subscribe": "Suscribirse",
@@ -25,25 +25,25 @@
   "pastEvents": "EVENTOS PASADOS",
   "socialMedia": "SÍGANOS EN REDES SOCIALES",
   "representation": "Representación",
-  "representationDes": "Asoblockchain se encarga de representar a nuestros miembros e intereses, así como priorizar una agenda regulatoria para la protección de los usuarios.",
+  "representationDes": "Asoblockchain representa los intereses de su membresía y prioriza una agenda regulatoria que proteja a las personas usuarias de la tecnología.",
   "participation": "Participación",
-  "participationDes": "Tomamos un papel activo en discusiones nacionales e internacionales, así como en coordinar con organizaciones tecnológicas, empresarios y usuarios.",
+  "participationDes": "Tomamos un papel activo en discusiones nacionales e internacionales, así como en coordinar con organizaciones tecnológicas, empresas y personas usuarias.",
   "promotion": "Promoción",
   "promotionDes": "Amplificamos nuestro mensaje, compartimos nuestro entusiasmo por las tecnologías blockchain y educamos sobre las funcionalidades y beneficios de estas.",
   "memberCompanies": "Empresas Miembros",
   "individuals": "Individuos",
   "students": "Estudiantes",
   "becomeMember": "ÚNASE A LA ASOCIACIÓN",
-  "joinAssociationDesc": "Nuestros miembros demuestran gran compromiso en construir, invertir y defender la tecnología de blockchain. Asoblockchain da la bienvenida a personas u organizaciones que quieran ayudarnos a desarrollar el ecosistema blockchain en Costa Rica. Tenemos distintas modalidades de membresía.",
+  "joinAssociationDesc": "Nuestra membresía demuestra un gran compromiso en construir, invertir y promover la tecnología de blockchain. Asoblockchain da la bienvenida a personas u organizaciones que quieran ayudarnos a desarrollar el ecosistema blockchain en Costa Rica. Tenemos distintas modalidades de membresía.",
   "organizationsCompanies": "Organizaciones y empresas:",
   "rightVoiceVote": "Con Derecho a Voz y Voto",
   "noRightVote": "Sin Derecho a Voto",
-  "individualAssociates": "Asociados individuales:",
-  "affiliates": "Afiliados:",
+  "individualAssociates": "Individual:",
+  "affiliates": "Afiliación:",
   "footerText": "Asoblockchain de Costa Rica es una organización sin fines de lucro y sin ninguna afiliación política. Si tiene consultas sobre nuestra representación, puede comunicarse con nosotros.",
   "accessOrganizationEvents": "Acceso a eventos de la organización.",
   "accessInformationAboutBlockchain": "Acceso a información sobre oportunidades y asesoría de blockchain en Costa Rica.",
-  "networkingBetweenBusinessmen": "Networking entre empresarios.",
+  "networkingBetweenBusinessmen": "Networking.",
   "websiteAnnouncementsIndustry": "Anuncios en el sitio web y apoyo en relaciones entre sectores.",
   "discountsActivitiesOrganized": "Descuentos en actividades organizadas por la asociación.",
   "accessAsoblockchainChat": "Acceso al chat de Asoblockchain.",
