feat(home): add pay button

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -106,5 +106,6 @@
   "invalidEmail": "Invalid email",
   "idiom": "Español",
   "information": "Information",
-  "language": "Language"
+  "language": "Language",
+  "pay": "Pay"
 }
