--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -93,9 +93,9 @@
   "discountActivitiesOrganizedASOBLOCKCHAIN": "Descuento de un 15% en actividades organizadas por ASOBLOCKCHAIN y un 7.5% de descuento para familiares de primer grado de consanguinidad.",
   "accessPeopleCompanyAsoblockchainChat": "Acceso para 5 personas de la empresa al chat de Asoblockchain CR en whats app.",
   "selectCompanyCategory": "Seleccione su categoría de Empresa. La membresía de empresa es de Asociado con Derecho a Voz y Voto.",
-  "companyEmployeesPerYear": "Empresa de 1 a 15 empleados - US$400.00 anual",
-  "company16to30EmployeesPerYear": "Company with 16 to 30 employees - US$600.00 per year",
-  "company31+EmployeesPerYear": "Company of 31+ employees - US$1,200.00 per year",
+  "companyEmployeesPerYear": "Empresa de 1 a 15 empleados - USD$400.00 anual",
+  "company16to30EmployeesPerYear": "Empresa de 16 a 30 empleados - USD$600.00 anual",
+  "company31+EmployeesPerYear": "Empresa de 31+ empleados - USD$1,200.00 anual",
   "contactPerson": "Persona de contacto",
   "titlePosition": "Cargo / Puesto",
   "back": "Atrás",
@@ -106,5 +106,6 @@
   "invalidEmail": "Email incorrecto",
   "idiom": "English",
   "information": "Información",
-  "language": "Lenguaje"
+  "language": "Lenguaje",
+  "pay": "Pagar"
 }
