feat(component): create members component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -107,5 +107,25 @@
   "idiom": "Español",
   "information": "Information",
   "language": "Language",
-  "pay": "Pay"
+  "pay": "Pay",
+  "president": "President, MBA,",
+  "presidentOcupation": "Founding Partner of Invermaster",
+  "vicePresident": "Vice President, Entrepreneur,",
+  "vicePresidentOcupation": "Partner at Edenia",
+  "secretary": "Secretary, Lawyer,",
+  "secretaryOcupation": "Partner at Lighthouse Legal",
+  "treasurer": "Treasurer, Computer Engineer,",
+  "treasurerOcupation": " Blockchain senior Manager in Ernst and Young",
+  "vocal1": "Vocal 1,  Lic. in Finance,",
+  "vocal1Ocupation": "LACChain Regional Lead Banco Interamericano de Desarrollo",
+  "vocal2": "Vocal 2, Master in Computational Engineering,",
+  "vocal2Ocupation": "Cryptocurrency Educator at CryptoReds",
+  "vocal3": "Vocal 3, Master in Community Development,",
+  "voval3Ocupation": "General manager Satisfied Vagabonds LLC",
+  "vocal4": "Vocal 4, MBA,",
+  "vocal4Ocupation": "Chief Executive Officer Delimart",
+  "vocal5": "Vocal 5, Master in Cryptocurrency,",
+  "vocal5Ocupation": "Professor at Lead University",
+  "prosecutor": "Prosecutor, Master in Computer Science and Software Engineering",
+  "photo": "Photo"
 }
