--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -107,5 +107,25 @@
   "idiom": "English",
   "information": "Información",
   "language": "Lenguaje",
-  "pay": "Pagar"
+  "pay": "Pagar",
+  "president": "Presidente, MBA,",
+  "presidentOcupation": "Socio Fundador de Invermaster",
+  "vicePresident": "Vicepresidente, Empresario,",
+  "vicePresidentOcupation": "Socio en Edenia",
+  "secretary": "Secretario, Abogado,",
+  "secretaryOcupation": "Socio de Lighthouse Legal",
+  "treasurer": "Tesorero, Ing. en Computación,",
+  "treasurerOcupation": "Gerente Senior de Blockchain en Ernst and Young",
+  "vocal1": "Vocal 1,  Lic. en Finanzas,",
+  "vocal1Ocupation": "Líder Regional de LACChain en Banco Interamericano de Desarrollo",
+  "vocal2": "Vocal 2, Máster en Ingeniería Computacional,",
+  "vocal2Ocupation": "Educador de Criptomonedas en CryptoReds",
+  "vocal3": "Vocal 3, Máster en Desarrollo Comunitario,",
+  "voval3Ocupation": "Gerente General Satisfied Vagabonds LLC",
+  "vocal4": "Vocal 4, MBA,",
+  "vocal4Ocupation": "Directora Ejecutiva Delimart",
+  "vocal5": "Vocal 5, Máster en Criptomoneda,",
+  "vocal5Ocupation": "Profesora en Lead University",
+  "prosecutor": "Fiscal, Maestría en la Ciencias de la Computación y de Ingeniería de Software",
+  "photo": "Foto"
 }
