feat(content): apply changes in content

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -91,7 +91,7 @@
   "accessInformationAboutOpportunitiesBLOCKCHAIN": "Access to information about opportunities in the BLOCKCHAIN area in Costa Rica. Advice to take advantage of opportunities in the BLOCKCHAIN area.",
   "specialCostASOBLOCKCHAINWebsite": "Ads with special cost on the ASOBLOCKCHAIN ​​website. Support and advice on intersectoral relations, mainly with the public sector.",
   "discountActivitiesOrganizedASOBLOCKCHAIN": "15% discount on activities organized by ASOBLOCKCHAIN ​​and a 7.5% discount for first-degree relatives.",
-  "accessPeopleCompanyAsoblockchainChat": "Access for 5 people from the company to the Asoblockchain CR chat on whats app.",
+  "accessPeopleCompanyAsoblockchainChat": "Access for 5 people from the company to the Asoblockchain CR chat on WhatsApp.",
   "selectCompanyCategory": "Select your Company category. The company membership is Associate with Right to Voice and Vote.",
   "companyEmployeesPerYear": "Company with 1 to 15 employees - US$400.00 per year",
   "company16to30EmployeesPerYear": "Company with 16 to 30 employees - US$600.00 per year",
