--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -88,10 +88,10 @@
   "registryCompaniesOrganizations": "Este registro es para empresas u organizaciones.",
   "profits": "Beneficios:",
   "accessEventsOrganizationVoiceVote": "Se brinda acceso a eventos de la organización, voz y voto en la toma de decisiones.",
-  "accessInformationAboutOpportunitiesBLOCKCHAIN": "Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica.Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
+  "accessInformationAboutOpportunitiesBLOCKCHAIN": "Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica. Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
   "specialCostASOBLOCKCHAINWebsite": "Anuncios con costo especial en el sitio web de ASOBLOCKCHAIN. Apoyo y asesoramiento en las relaciones intersectoriales, principalmente con el sector público.",
   "discountActivitiesOrganizedASOBLOCKCHAIN": "Descuento de un 15% en actividades organizadas por ASOBLOCKCHAIN y un 7.5% de descuento para familiares de primer grado de consanguinidad.",
-  "accessPeopleCompanyAsoblockchainChat": "Acceso para 5 personas de la empresa al chat de Asoblockchain CR en whats app.",
+  "accessPeopleCompanyAsoblockchainChat": "Acceso para 5 personas de la empresa al chat de Asoblockchain CR en WhatsApp.",
   "selectCompanyCategory": "Seleccione su categoría de Empresa. La membresía de empresa es de Asociado con Derecho a Voz y Voto.",
   "companyEmployeesPerYear": "Empresa de 1 a 15 empleados - USD$400.00 anual",
   "company16to30EmployeesPerYear": "Empresa de 16 a 30 empleados - USD$600.00 anual",
