--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -57,9 +57,11 @@
   "titleFirtsNew": "Position of the Blockchain Association of Costa Rica regarding the proposal of taxes on crypto assets of the Ministry of Finance",
   "titleSecondNew": "The panorama in 2021 for blockchain and cryptocurrencies in Costa Rica",
   "titleThreeNew": "AsoBlockchain and the future of Blockchain in Costa Rica",
+  "titleFourthNew": "New Board of Directors Association Blockchain Costa Rica",
   "november2021": "November 11, 2021",
   "febrero2021": " 7 February, 2021",
-  "enero2019": "8 January 2019",
+  "enero2019": "8 January, 2019",
+  "mar2022": "29 March, 2022",
   "newsletter": "Asoblockchain respects your privacy, and your information will be kept confidential. You can drop out anytime from our communications.",
   "contactUsNow": "CONTACT US NOW",
   "sentSuccessfully": "Thank you for contacting Asoblockchain. We will reply to you as soon as possible",
