--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -128,6 +128,6 @@
   "vocal4Ocupation": "Chief Executive Officer Delimart",
   "vocal5": "Vocal 5, Master in Cryptocurrency,",
   "vocal5Ocupation": "Professor at Lead University",
-  "prosecutor": "Prosecutor, Master in Computer Science and Software Engineering",
+  "prosecutor": "Prosecutor, PH.D in Economics, Master in Computer Science and Software Engineering",
   "photo": "Photo"
 }
