--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -128,6 +128,6 @@
   "vocal4Ocupation": "Directora Ejecutiva Delimart",
   "vocal5": "Vocal 5, Máster en Criptomoneda,",
   "vocal5Ocupation": "Profesora en Lead University",
-  "prosecutor": "Fiscal, Maestría en la Ciencias de la Computación y de Ingeniería de Software",
+  "prosecutor": "Fiscal, Doctorado en Economía, Maestría en Ciencias de la Computación y de Ingeniería de Sotfware",
   "photo": "Foto"
 }
