--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -58,10 +58,12 @@
   "titleSecondNew": "El panorama en el 2021 para blockchain y criptomonedas en Costa Rica",
   "titleThreeNew": "AsoBlockchain y el futuro de Blockchain en Costa Rica",
   "titleFourthNew": "Nueva Junta Directiva Asociación Blockchain Costa Rica",
+  "titleFifthNew": "Razones para prevenir a CRCoin como una inversión",
   "november2021": "Noviembre 11, 2021",
   "febrero2021": " 7 Febrero, 2021",
   "enero2019": "8 Enero, 2019",
   "mar2022": "29 Marzo, 2022",
+  "april2022": "28 Abril, 2022",
   "newsletter": "Asoblockchain respeta su privacidad. Su información se mantendrá confidencial y puede darse de baja de estas comunicaciones en cualquier momento",
   "contactUsNow": "CONTÁCTENOS AHORA",
   "sentSuccessfully": "Gracias por contactar a Asoblockchain. Le responderemos lo antes posible",
