(FE): add documents in footer

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -41,6 +41,9 @@
   "individualAssociates": "Individual members:",
   "affiliates": "Affiliates: ",
   "footerText": "Asoblockchain de Costa Rica is a non-profit organization with no political affiliation. If you have questions about our representation, please contact us. ",
+  "footerDocsTitle": "Documentation",
+  "firstDocument": "Terms and Conditions",
+  "secondDocument": "How to invest in crypto projects?",
   "accessOrganizationEvents": "Access to events by the organization.",
   "accessInformationAboutBlockchain": "Access to information about opportunities and advisory about blockchain in Costa Rica.",
   "networkingBetweenBusinessmen": "Networking.",
