--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -41,6 +41,9 @@
   "individualAssociates": "Individual:",
   "affiliates": "Afiliación:",
   "footerText": "Asoblockchain de Costa Rica es una organización sin fines de lucro y sin ninguna afiliación política. Si tiene consultas sobre nuestra representación, puede comunicarse con nosotros.",
+  "footerDocsTitle": "Documentación",
+  "firstDocument": "Términos y Condiciones",
+  "secondDocument": "¿Cómo invertir en proyectos cripto?",
   "accessOrganizationEvents": "Acceso a eventos de la organización.",
   "accessInformationAboutBlockchain": "Acceso a información sobre oportunidades y asesoría de blockchain en Costa Rica.",
   "networkingBetweenBusinessmen": "Networking.",
