--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -129,5 +129,23 @@
   "vocal5": "Vocal 5, Master in Cryptocurrency,",
   "vocal5Ocupation": "Professor at Lead University",
   "prosecutor": "Prosecutor, PH.D in Economics, Master in Computer Science and Software Engineering",
-  "photo": "Photo"
+  "photo": "Photo",
+  "plan1Title": "Company from 1 to 15 employees",
+  "item1": "Access to organization events, voice and vote in decision making is provided.",
+  "item2": "Access to information about BLOCKCHAIN opportunities in Costa Rica.",
+  "item3": "Consulting to take advantage of opportunities in the BLOCKCHAIN area.",
+  "item4": "Networking.",
+  "item5": "Special cost ads on the ASOBLOCKCHAIN website.",
+  "item6": "Support and advice on intersectoral relations, mainly with the public sector.",
+  "item7": "Access for 5 people from the company to the Asoblockchain CR chat on whatsApp.",
+  "plan2Title": "Company with 16 to 30 employees",
+  "plan3Title": "Company with more than 31 employees",
+  "plan4Title": "Associate with Voice and Voting Rights",
+  "item8": "Access to the organization's events at a discounted price, voice and vote in decision making.",
+  "item9": "Acceso individual al chat de Asoblockchain CR en whatsApp.",
+  "plan5Title": "Non-Voting Member",
+  "item10": "Access to the organization's events is provided at a discounted rate, with a voice (but no vote in decision-making).",
+  "plan6Title": "Donation for development",
+  "item11": "If you would like to support our efforts and ensure that we can inform, support, advocate and educate on Blockchain, donate today.",
+  "item12": "Donations may be used for development, event planning, among others."
 }
