--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -129,5 +129,23 @@
   "vocal5": "Vocal 5, Máster en Criptomoneda,",
   "vocal5Ocupation": "Profesora en Lead University",
   "prosecutor": "Fiscal, Doctorado en Economía, Maestría en Ciencias de la Computación y de Ingeniería de Sotfware",
-  "photo": "Foto"
+  "photo": "Foto",
+  "plan1Title": "Empresa de 1 a 15 empleados",
+  "item1": "Se brinda acceso a eventos de la organización, voz y voto en la toma de decisiones",
+  "item2": "Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica.",
+  "item3": "Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
+  "item4": "Networking.",
+  "item5": "Anuncios con costo especial en el sitio web de ASOBLOCKCHAIN.",
+  "item6": "Apoyo y asesoramiento en las relaciones intersectoriales, principalmente con el sector público.",
+  "item7": "Acceso para 5 personas de la empresa al chat de Asoblockchain CR en whatsApp.",
+  "plan2Title": "Empresa de 16 a 30 empleados",
+  "plan3Title": "Empresa de mas de 31 empleados",
+  "plan4Title": "Asociado con Derecho de Voz y Voto",
+  "item8": "Se brinda acceso a eventos de la organización a precio de descuento, voz y voto en la toma de decisiones.",
+  "item9": "Acceso individual al chat de Asoblockchain CR en whatsApp.",
+  "plan5Title": "Afiliado sin Derecho a Voto",
+  "item10": "Se brinda acceso a eventos de la organización a precio de descuento, con voz (pero sin voto en la toma de decisiones).",
+  "plan6Title": "Donación para desarrollo",
+  "item11": "Si desea apoyar nuestros esfuerzos y asegurarse de que podamos informar, apoyar, defender y educar en Blockchain, haga una donación hoy.",
+  "item12": "Las donaciones podrán ser usadas para desarrollo, planeación de eventos, entre otros."
 }
