--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -43,7 +43,6 @@
   "footerText": "Asoblockchain de Costa Rica es una organización sin fines de lucro y sin ninguna afiliación política. Si tiene consultas sobre nuestra representación, puede comunicarse con nosotros.",
   "accessOrganizationEvents": "Acceso a eventos de la organización.",
   "accessInformationAboutBlockchain": "Acceso a información sobre oportunidades y asesoría de blockchain en Costa Rica.",
-  "networkingBetweenBusinessmen": "Networking.",
   "websiteAnnouncementsIndustry": "Anuncios en el sitio web y apoyo en relaciones entre sectores.",
   "discountsActivitiesOrganized": "Descuentos en actividades organizadas por la asociación.",
   "accessAsoblockchainChat": "Acceso al chat de Asoblockchain.",
@@ -67,7 +66,6 @@
   "sentSuccessfully": "Gracias por contactar a Asoblockchain. Le responderemos lo antes posible",
   "name": "Nombre",
   "telephone": "Teléfono",
-  "email": "Correo electrónico",
   "message": "Mensaje",
   "submit": "Enviar",
   "business": "Empresarial",
@@ -76,12 +74,9 @@
   "naturalPersonRegistration": "Registro Persona Física",
   "recordPersonal": "Este registro es personal. Porfavor seleccione su categoría de afiliación.",
   "associated": "Asociado:",
-  "associatedFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, voz y voto en la toma de decisiones.",
-  "associatedSecondPoint": " -Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica. Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
   "affiliate": "Afiliado:",
   "affiliateFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, con voz (pero sin voto en la toma de decisiones)",
   "selectMembershipCategory": "Seleccione su categoría de afiliación",
-  "associateVoiceVotingRights": "Asociado con Derecho de Voz y Voto - Costo Anual: $150",
   "affiliateAnnualCost": "Afiliado - Costo Anual: $50",
   "professionOccupation": "Profesión u Ocupación",
   "reasonJoin": "Motivo para Asociarse",
@@ -89,14 +84,8 @@
   "legalEntityRegistration": "Registro Persona Jurídica",
   "registryCompaniesOrganizations": "Este registro es para empresas u organizaciones.",
   "profits": "Beneficios:",
-  "accessEventsOrganizationVoiceVote": "Se brinda acceso a eventos de la organización, voz y voto en la toma de decisiones.",
-  "accessInformationAboutOpportunitiesBLOCKCHAIN": "Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica. Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
-  "specialCostASOBLOCKCHAINWebsite": "Anuncios con costo especial en el sitio web de ASOBLOCKCHAIN. Apoyo y asesoramiento en las relaciones intersectoriales, principalmente con el sector público.",
   "discountActivitiesOrganizedASOBLOCKCHAIN": "Descuento de un 15% en actividades organizadas por ASOBLOCKCHAIN y un 7.5% de descuento para familiares de primer grado de consanguinidad.",
-  "accessPeopleCompanyAsoblockchainChat": "Acceso para 5 personas de la empresa al chat de Asoblockchain CR en WhatsApp.",
   "selectCompanyCategory": "Seleccione su categoría de Empresa. La membresía de empresa es de Asociado con Derecho a Voz y Voto.",
-  "companyEmployeesPerYear": "Empresa de 1 a 15 empleados - USD$400.00 anual",
-  "company16to30EmployeesPerYear": "Empresa de 16 a 30 empleados - USD$600.00 anual",
   "company31+EmployeesPerYear": "Empresa de 31+ empleados - USD$1,200.00 anual",
   "contactPerson": "Persona de contacto",
   "titlePosition": "Cargo / Puesto",
@@ -147,5 +136,19 @@
   "item10": "Se brinda acceso a eventos de la organización a precio de descuento, con voz (pero sin voto en la toma de decisiones).",
   "plan6Title": "Donación para desarrollo",
   "item11": "Si desea apoyar nuestros esfuerzos y asegurarse de que podamos informar, apoyar, defender y educar en Blockchain, haga una donación hoy.",
-  "item12": "Las donaciones podrán ser usadas para desarrollo, planeación de eventos, entre otros."
+  "item12": "Las donaciones podrán ser usadas para desarrollo, planeación de eventos, entre otros.",
+  "membershipPlans": "Planes de Membresía",
+  "select": "Seleccionar",
+  "selected": "Seleccionado",
+  "seeMore": "Ver más",
+  "addYourData": "Ingresa Tus Datos",
+  "fullName": "Nombre Completo",
+  "email": "Correo Electrónico",
+  "totalToPay": "Total a Pagar",
+  "continue": "Continuar",
+  "creatingOrder": "Creando Orden",
+  "createOrder": "Crear Orden de Pago",
+  "membershipPaid": "Membresía Pagada",
+  "order": "Orden",
+  "plan": "Plan"
 }
