--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -16,7 +16,7 @@
   "ourReasonBeing": "OUR PURPOSE",
   "joinTheAssociation": "JOIN THE ASSOCIATION",
   "committedFuture": "Asoblockchain de Costa Rica commits to the future.",
-  "associationMembers": "Association Members",
+  "associationMembers": "Association Members of the Board",
   "ourReasonBeingDes": "Asoblockchain de Costa Rica is committed to pushing the innovation and development of distributed technologies to benefit Costa Rican society. We seek to forge relationships among various sectors to co-create a more transparent, inspiring, and safe digital future.",
   "interestingData": "INTERESTING DATA",
   "subscribeNewsletter": "Subscribe to our newsletter",
