--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -16,7 +16,7 @@
   "ourReasonBeing": "NUESTRA RAZÓN DE SER",
   "joinTheAssociation": "ÚNASE A LA ASOCIACIÓN",
   "committedFuture": "Asoblockchain de Costa Rica se compromete con el futuro",
-  "associationMembers": "Miembros de la Asociación",
+  "associationMembers": "Miembros de la Junta Directiva",
   "ourReasonBeingDes": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense. Conectamos a distintos sectores para co-crear un futuro digital más transparente, inspirador y seguro.",
   "interestingData": "DATOS INTERESANTES",
   "subscribeNewsletter": "Suscríbase al boletín",
